# releases

./: CGAL-2.2_patch1.txt  CGAL-2.3_patch1.txt  INSTALL  INSTALL.win32  LICENSE  README  README.md  README_RTTI  RELEASE  VERSION  cgal_config.bat  install.txt  install_cgal  makedefs  makefile  makefile_original  manual.ps  system
examples/Advancing_front_surface_reconstruction/: CMakeLists.txt
examples/Barycentric_coordinates_2/: CMakeLists.txt
examples/Box_intersection_d/: Box_intersection_d.sln  CMakeLists.txt  box_grid.vcproj  custom_box_grid.vcproj  makefile  minimal.vcproj  minimal_self.vcproj  proximity_custom_box_traits.vcproj  triangle_self_intersect.vcproj  triangle_self_intersect_pointers.vcproj
examples/Box_intersection_d/VC/: box_grid.vcproj  custom_box_grid.vcproj  minimal.vcproj  minimal_self.vcproj  proximity_custom_box_traits.vcproj  triangle_self_intersect.vcproj  triangle_self_intersect_pointers.vcproj
examples/Circular_kernel_2/: CMakeLists.txt  Circular_kernel_2.sln
examples/Circular_kernel_2/VC/: Circular_kernel_arrangement.vcproj  Circular_kernel_arrangement_Line_Circular.vcproj  Exact_circular_kernel.vcproj  (+3 more)
examples/Circulator/: CMakeLists.txt  Circulator.dsw  Circulator.sln  circulator_prog1.C  circulator_prog1.vcproj  circulator_prog2.C  circulator_prog2.vcproj  circulator_prog3.C  circulator_prog3.vcproj  makefile  makefile.mak  version
examples/Combinatorial_map/: CMakeLists.txt
examples/Convex_hull_2/: CMakeLists.txt  Convex_hull_2.dsw  Convex_hull_2.sln  ch_example_from_cin_to_cout.vcproj  ch_example_timing.C  ch_example_timing.vcproj  ch_graham_anderson.vcproj  makefile  makefile.mak
examples/Envelope_2/: CMakeLists.txt  Envelope_2.sln
examples/Generator/: CMakeLists.txt  Generator.dsw  Generator.sln  Segment_generator_example1.C  Segment_generator_example1.vcproj  Segment_generator_example2.vcproj  generators_example1.vcproj  generators_example2.vcproj  makefile  makefile.mak  random_poly_example.vcproj  random_polygon_ex.C  random_polygon_ex.vcproj  rcs_example.vcproj  version
examples/Interpolation/: CMakeLists.txt  Interpolation.sln  interpolation_2.vcproj  linear_interpolation_2.vcproj  nn_coordinates_2.vcproj  nn_coordinates_3.vcproj  rn_coordinates_2.vcproj  sibson_interpolation_2.vcproj  surface_neighbor_coordinates_3.vcproj
examples/Kernel_23/: CMakeLists.txt  Kernel_23.sln  MyKernel.vcproj  makefile  test_delaunay_2.vcproj  test_polyhedron_prog_incr_builder.vcproj  test_polyhedron_prog_incr_builder_own_archetype.vcproj
examples/Kinetic_data_structures/: CMakeLists.txt  Delaunay_triangulation_2.vcproj  Delaunay_triangulation_3.vcproj  Kinetic_data_structures.sln  insert_event.vcproj  makefile  regular_triangulation_3.vcproj  sort.vcproj  sweepline.vcproj
examples/Kinetic_framework/: CMakeLists.txt  Kinetic_framework.sln  adding_a_certificate.vcproj  listener.vcproj  makefile  pointer_queue.vcproj  ref_counted.vcproj  trivial_kds.vcproj
examples/Matrix_search/: CMakeLists.txt  Matrix_search.dsw  Matrix_search.sln  all_furthest_neighbors_2_example.C  all_furthest_neighbors_2_example.vcproj  extremal_polygon_2_example.C  extremal_polygon_2_example.vcproj  makefile.mak  rectangular_p_center_2_example.C  rectangular_p_center_2_example.vcproj  sorted_matrix_search_example.C  sorted_matrix_search_example.vcproj
examples/Minkowski_sum_2/: CMakeLists.txt  Minkowski_sum_2.sln
examples/Partition_2/: CMakeLists.txt  Partition_2.dsw  Partition_2.sln  approx_convex_ex.C  approx_convex_ex.vcproj  approx_convex_partition_2.vcproj  greene_approx_convex_ex.C  greene_approx_convex_ex.vcproj  greene_approx_convex_partition_2.vcproj  makefile  optimal_convex_ex.C  optimal_convex_ex.vcproj  optimal_convex_partition_2.vcproj  y_monotone_ex.C  y_monotone_ex.vcproj  y_monotone_partition_2.vcproj
examples/Periodic_2_triangulation_2/: CMakeLists.txt
examples/Periodic_3_triangulation_3/: CMakeLists.txt
examples/Polyhedron_IO/: CMakeLists.txt  Polyhedron_IO.dsw  Polyhedron_IO.sln  iv2off.C  iv2off.vcproj  makefile  makefile.mak  off2iv.C  off2iv.vcproj  off2off.C  off2off.vcproj  off2stl.C  off2stl.vcproj  off2vrml.C  off2vrml.vcproj  off2wav.C  off2wav.vcproj  off_bbox.C  off_bbox.vcproj  off_glue.C  off_glue.vcproj  off_transform.C  off_transform.vcproj  polyhedron2vrml.vcproj  polyhedron_copy.C  polyhedron_copy.vcproj  terr_trian.C  terr_trian.vcproj  triangulation_print_OFF.h  version
examples/Polytope_distance_d/: CMakeLists.txt  Polytope_distance_d.sln  makefile  polytope_distance_d.vcproj  polytope_distance_d_exact.vcproj  polytope_distance_d_fast_exact.vcproj
examples/QP_solver/: CMakeLists.txt  QP_solver.sln  data_to_mps.C  data_to_mps.vcproj  double_qp_solver.C  double_qp_solver.vcproj  integer_qp_solver.C  integer_qp_solver.vcproj  makefile  qp_solver1.vcproj  qp_solver2.vcproj  rational_qp_solver.C  rational_qp_solver.vcproj
examples/STL_Extension/: CMakeLists.txt  STL_Extension.dsw  STL_Extension.sln  cgal_test  in_place_list_prog.vcproj  makefile  makefile.mak  min_element_if_example_noheader.vcproj  min_max_element_example_noheader.vcproj  version
examples/Segment_Delaunay_graph_2/: CMakeLists.txt  Segment_Delaunay_graph_2.sln  makefile  sdg-count-sites.vcproj  sdg-filtered-traits.vcproj  sdg-voronoi-edges.vcproj
examples/Snap_rounding_2/: CMakeLists.txt  Snap_rounding_2.sln  example1.vcproj  example2.vcproj  makefile
examples/Spatial_sorting/: CMakeLists.txt  Spatial_sorting.sln
examples/Stream_lines_2/: CMakeLists.txt  Stream_lines_2.sln  stl_regular_field.vcproj  stl_triangular_field.vcproj
examples/Subdivision_method_3/: CMakeLists.txt  CatmullClark_subdivision.vcproj  Customized_subdivision.vcproj  DooSabin_subdivision.vcproj  Loop_subdivision.vcproj  Subdivision_method_3.sln
examples/Triangulation_3/: CMakeLists.txt  Triangulation_3.dsw  Triangulation_3.sln  example_adding_handles.vcproj  example_color.vcproj  example_find_conflicts.vcproj  example_hierarchy.vcproj  example_linking_2d_and_3d.vcproj  example_regular.vcproj  example_simple.vcproj  example_tds.vcproj  makefile  makefile.mak
(+10559 files in other folders)
